@@ -425,15 +425,15 @@ C<select>. e.g.
 
 =item shebang
 
-One or more words, separated by whitespace or on multiple lines, indicating
-which shebang lines to accept. This is optional and further filters C<select>.
-e.g.
+One or more words on multiple lines, indicating which shebang lines to
+accept. This is optional and further filters C<select>.  e.g.
 
     ; All files with no extension anywhere under bin that include a "perl" or
     ; "perl5" shebang line.
     select = bin/**/*
     ignore = bin/**/*.*
-    shebang = perl perl5
+    shebang = perl
+    shebang = perl5
 
 =item only_modes
 
